--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.11.0-0 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,28 +26,27 @@ dependencies:
   flutter_localizations:  
     sdk: flutter          
 
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.3
   hive: ^2.0.4
-  animated_icon_button: ^1.0.0
-  clippy_flutter: ^1.1.1
-  connectivity: ^3.0.2
-  equatable: ^2.0.0
+  animated_icon_button: ^1.0.2
+  clippy_flutter: ^2.0.0-nullsafety.1
+  connectivity: ^3.0.6
+  equatable: ^2.0.3
   flutter_bloc: ^7.0.1
-  flutter_icons: ^1.1.0
-  flutter_local_notifications: ^5.0.0
-  flutter_svg: ^0.19.3
-  font_awesome_flutter: ^8.12.0
-  get_it: ^6.0.0
-  google_fonts: ^2.0.0 
+  font_awesome_flutter: ^9.0.0-nullsafety
+  flutter_local_notifications: ^6.0.0
+  flutter_svg: ^0.22.0
+  get_it: ^7.2.0
+  google_fonts: ^2.1.0 
   intl: ^0.17.0
   path: ^1.8.0
-  pin_entry_text_field: ^0.1.4
+  pin_code_fields: ^7.0.0-nullsafety
   provider: ^5.0.0
-  rxdart: ^0.26.0
+  rxdart: ^0.27.1
   dio: ^4.0.0 
-  shared_preferences: ^2.0.4 
-  table_calendar: ^2.3.3
-  popover: ^0.2.5
+  shared_preferences: ^2.0.6 
+  table_calendar: ^3.0.1
+  popover: ^0.2.6+2
   uuid: ^3.0.4
 
 dev_dependencies:
