--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/images/icons
+    - assets/icons/
   fonts:
     - family: Butter
       fonts:
