--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bonappetit">
+    package="com.cd.bonappetit">
    <application
-        android:label="bonappetit"
+        android:label="Delicious"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
