--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   connectivity_plus: ^2.3.0
   google_fonts: ^2.3.2
   font_awesome: ^5.10.1
+  material_floating_search_bar: ^0.3.7
+  material_design_icons_flutter: ^5.0.6595
 
 dev_dependencies:
   flutter_test:
